Switch to voxel-oculus-vr.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "voxel-player": "~0.1.0",
     "emitter": "0.0.1",
     "voxel-debris": "0.0.4",
-    "voxel-oculus": "~0.1.0",
     "voxel-highlight": "0.0.9",
     "voxel-items": "0.0.4",
     "interact": "0.0.3",
@@ -16,7 +15,8 @@
     "voxel-gamepad": "0.0.1",
     "three": "~0.58.10",
     "connect": "*",
-    "connect-render": "*"
+    "connect-render": "*",
+    "voxel-oculus-vr": "*"
   },
   "scripts": {},
   "author": "",
